@@ -1,0 +1,6 @@
+package org.spockframework.runtime.model;
+
+public interface INameable {
+    String getDisplayName();
+    void setDisplayName(String displayName);
+}
